--- a/src/app/dropdown.module.scss
+++ b/src/app/dropdown.module.scss
@@ -3,34 +3,57 @@
   flex-direction: column;
   flex-grow: 1;
   justify-content: center;
+  height: 100%;
+  position: relative;
   //   button {
   //     border: none;
   //   }
   button {
     padding: 0 max(5%, 1rem);
   }
+  .caret {
+    width: 0.7rem;
+  }
 }
 
-.list {
-  display: flex;
-  flex-direction: column;
+.listWrapper {
   border: 1px solid #e9e8e8;
   background-color: transparent;
   position: absolute;
   top: 100%;
   width: 100%;
+  //   height: 5rem;
   isolation: isolate;
+  display: none;
   //   z-index: 1;
+
+  .list {
+    height: 100%;
+    max-height: 500px;
+    width: 100%;
+    position: relative;
+    top: 0;
+    inset: 0;
+    display: flex;
+    flex-direction: column;
+    background-color: transparent;
+    transition: transform 0.5s;
+    opacity: 0;
+    animation: listAnimation 0.5s forwards;
+    animation-delay: 0.5s;
+  }
   &::before {
     content: "";
     width: 100%;
-    height: 0%;
-    position: absolute;
-    background-color: blue;
-    inset: 0;
-    z-index: -1;
-    transition: height 0.2s;
     height: 100%;
+    position: absolute;
+    background-color: white;
+    // inset: 0;
+    z-index: -1;
+    // transform: scale(0);
+    // transition: height 0.5s;
+    transform-origin: top center;
+    animation: scaleAnimation 0.5s forwards;
   }
   button {
     border: none;
@@ -39,18 +62,45 @@
     color: black;
     text-align: left;
     position: relative;
+    height: 2rem;
     // padding: 1rem;
   }
   .listItem:hover {
     background-color: red;
   }
 }
+@keyframes listAnimation {
+  from {
+    opacity: 0;
+    transform: translateY(-10px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+@keyframes scaleAnimation {
+  from {
+    transform: scaleY(0);
+  }
+  to {
+    transform: scaleY(1);
+  }
+}
+.listWrapper.active {
+  display: flex;
+  &::before {
+    // transform: scale(1);
+    height: 100%;
+  }
+}
 .header {
-  width: 250px;
+  width: 100%;
   height: 100%;
   background-color: white;
   color: black;
   border: 1px solid #e9e8e8;
   display: flex;
+  justify-content: space-between;
   align-items: center;
 }
